erDiagram
    ORDER {
        bigint id PK
        varchar order_no UK
        bigint appointment_id FK
        bigint user_id FK
        bigint package_id FK
        decimal total_amount
        decimal pay_amount
        decimal discount_amount
        tinyint status
        varchar pay_channel
    }

    ORDER_ITEM {
        bigint id PK
        bigint order_id FK
        tinyint item_type
        varchar ref_item_code
        varchar ref_item_name
        int qty
        decimal unit_price
        decimal amount
    }

    PAYMENT_RECORD {
        bigint id PK
        varchar payment_no UK
        bigint order_id FK
        varchar channel
        varchar trade_no
        decimal pay_amount
        tinyint status
    }

    REFUND_APPLY {
        bigint id PK
        varchar apply_no UK
        bigint order_id FK
        varchar refund_type
        decimal apply_amount
        varchar reason
        tinyint apply_status
    }

    APPOINTMENT ||--|| ORDER : "生成订单"
    USER ||--o{ ORDER : "创建订单"
    ORDER ||--o{ ORDER_ITEM : "包含明细"
    ORDER ||--o{ PAYMENT_RECORD : "支付记录"
    ORDER ||--o{ REFUND_APPLY : "退款申请"
